Regression: Wingding type font doesn't load #101481

Closed
opened 2022-09-29 19:49:05 +02:00 by Pam Hampton · 14 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: AMD Radeon(TM) Vega 8 Graphics ATI Technologies Inc. 4.5.14761 Core Profile Context 21.30.24.03 30.0.13024.3004

Blender Version
Worked: 3.0.0 Alpha, branch: master, commit date: 2021-08-31 17:17, hash: 838b6ec48a
Broken: 3.0.0 Alpha, branch: master, commit date: 2021-09-26 21:28, hash: d046a1f2fa and all after this

Short description of error
Windings font from the windows font library does not open like the rest.
2022-09-29 21-54-14.mp4

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: AMD Radeon(TM) Vega 8 Graphics ATI Technologies Inc. 4.5.14761 Core Profile Context 21.30.24.03 30.0.13024.3004 **Blender Version** Worked: 3.0.0 Alpha, branch: master, commit date: 2021-08-31 17:17, hash: `838b6ec48a` Broken: 3.0.0 Alpha, branch: master, commit date: 2021-09-26 21:28, hash: `d046a1f2fa` and all after this **Short description of error** Windings font from the windows font library does not open like the rest. [2022-09-29 21-54-14.mp4](https://archive.blender.org/developer/F13593337/2022-09-29_21-54-14.mp4)
Author

Added subscriber: @PamelaHampton

Added subscriber: @PamelaHampton

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This comment was removed by @mod_moder

*This comment was removed by @mod_moder*
Iliya Katushenock changed title from Wingding type font doesn't load to Regression: Wingding type font doesn't load 2022-09-29 21:02:06 +02:00
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

@PamelaHampton - Your "Worked" and "Broken" versions list the same versions. And I can't tell which versions you are showing in the video. Can you please list which versions that you tested in the video?

@PamelaHampton - Your "Worked" and "Broken" versions list the same versions. And I can't tell which versions you are showing in the video. Can you please list which versions that you tested in the video?

@Harley This was my test, sorry if I was misleading.
I got confused in the files, although it seemed to me that in the end I specified everything correctly ... I'll fix it now!

@Harley This was my test, sorry if I was misleading. I got confused in the files, although it seemed to me that in the end I specified everything correctly ... I'll fix it now!

(This is the maximum accuracy that I have to identify the error based on the versions I have on my computer.)

@PamelaHampton And thank you for your report.

(This is the maximum accuracy that I have to identify the error based on the versions I have on my computer.) @PamelaHampton And thank you for your report.
Harley Acheson self-assigned this 2022-09-29 23:33:31 +02:00
Member

Weird about these dates though is that I only added the ability to use Wingding and symbol fonts with a commit on 2021-08-04 ae920d789e. Therefore it makes sense that it is reported working on 2021-08-31. But then the "Broken" date is just a month later.

That patch did not alter check_freetypefont, which is what is failing now. And although I have mucked around in that area, I'm not seeing any changes that explain this change of behavior. It appears that we always have not set an explicit character map in that function. It fails on FT_Get_First_Char because no character map is selected because the font does not have a Unicode charmap.

I suspect this behavior change might be from an updated version of FreeType, which no longer chooses something else when fonts don't have a Unicode character map. It works fine if I explicitly set the character set in the same way it does in other places.

Will submit a patch.

Weird about these dates though is that I only added the ability to use Wingding and symbol fonts with a commit on 2021-08-04 ae920d789e. Therefore it makes sense that it is reported working on 2021-08-31. But then the "Broken" date is just a month later. That patch did not alter `check_freetypefont`, which is what is failing now. And although I have mucked around in that area, I'm not seeing any changes that explain this change of behavior. It appears that we always have not set an explicit character map in that function. It fails on `FT_Get_First_Char` because no character map is selected because the font does not have a Unicode charmap. I suspect this behavior change might be from an updated version of FreeType, which no longer chooses something else when fonts don't have a Unicode character map. It works fine if I explicitly set the character set in the same way it does in other places. Will submit a patch.
Author

Also, the foreign language fonts don't work either. Also, if you type with MS Spanish keyboard accents are not shown. Two different issues, but thought I should mention them.

Thanks,
Pam

Also, the foreign language fonts don't work either. Also, if you type with MS Spanish keyboard accents are not shown. Two different issues, but thought I should mention them. Thanks, Pam
Member

@PamelaHampton - Also, the foreign language fonts don't work either. Also, if you type with MS Spanish keyboard accents are not shown. Two different issues, but thought I should mention them.

Anything different from what is described in this bug report should be submitted as a separate bug report. We can't really track off-topic comments for action.

Also:

{F13607964,width=100%}

> @PamelaHampton - Also, the foreign language fonts don't work either. Also, if you type with MS Spanish keyboard accents are not shown. Two different issues, but thought I should mention them. Anything different from what is described in this bug report should be submitted as a separate bug report. We can't really track off-topic comments for action. Also: {[F13607964](https://archive.blender.org/developer/F13607964/image.png),width=100%}

This issue was referenced by 104fd82f74

This issue was referenced by 104fd82f74281471d69e61d06de44fca8fdf269c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

closing with commit {104fd82f7428}

closing with commit {104fd82f7428}
Bastien Montagne added this to the Core project 2023-02-09 15:43:11 +01:00
Bastien Montagne removed this from the Core project 2023-02-09 18:19:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101481
No description provided.